--- a/.onedev-buildspec.yml
+++ b/.onedev-buildspec.yml
@@ -18,6 +18,9 @@ jobs:
     force: true
     condition: SUCCESSFUL
     optional: false
+  triggers:
+  - type: BranchUpdateTrigger
+    userMatch: anyone
   retryCondition: never
   maxRetries: 3
   retryDelay: 30
